<resources>
    <string name="app_name">Welcome To Hogwarts</string>
    <string name="txtSplashTitle">Welcome to Hogwarts</string>
    <string name="txtSortingTitle">The Sorting Hat will determine which house you, belong in.  Click the button that best matches your personality.</string>
    <string name="btnSortingSubmit">Submit your class questionaire</string>
    <string name="txtSortingBtn">Clicking this button will submit your quiz (if chosen), calculate the quiz, and transitions to the next screen.</string>
    <string name="txtSortingClassTitle">This screen will display an image of the class you\'ve been assigned to (if quiz is chosen), or after shake input will transition to this screen.</string>
    <string name="btnSortClassContinue">Find your patronus!</string>
    <string name="txtSortClassBtn">Clicking this button will change the screen to the patronus screen</string>
    <string name="txtPatronusTitle">Tap the screen to summon your Patronus</string>
    <string name="btnDistanceTitle">Distance from Platform 9 and 3/4</string>
    <string name="txtDistanceBtn">Clicking this button will bring you to the screen which takes your location and how far you are from Platform 9 and 3/4</string>
    <string name="txtDistanceTitle">This screen will use device\'s location to calculate and display how far away the user is from Platform 9 and 3/4 (King Cross Station, London, UK)</string>
    <string name="hogwarts">Castle Image</string>
    <string name="rabbit">Rabbit Patronus</string>
    <string name="fox">Fox Patronus</string>
    <string name="otter">Otter Patronus</string>
    <string name="gryffindor">Gryffindor img</string>
    <string name="slytherin">Slytherin img</string>
    <string name="ravenclawd">Ravenclaw img</string>
    <string name="hufflepuff">Hufflepuff img</string>
    <string name="sortinghat">Sorting Hat img</string>
    <string name="stag">Stag Patronus img</string>
    <string name="smoke">Patronus img</string>
    <string name="question">Mark img</string>
    <string name="google_maps_key">AIzaSyBzpXdVQafdL51iHu6_3rYXNmu8XfsQWfc</string>
    <string name="btnBackSorting">Go back to the Sorting Hat</string>
    <string name="btnGrif">Brave and Chivalrous</string>
    <string name="btnSly">Ambitious and Cunning</string>
    <string name="btnRaven">Intelligent and Witty</string>
    <string name="btnHuff">Loyal and Patient</string>
    <string name="candlels">Candel background</string>
    <string name="housebkg">House background</string>


</resources>
