<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.welcometohogwarts.SortingHat">

    <TextView
        android:id="@+id/txtSortingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/txtSortingTitle"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSortingSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/btnSortingSubmit" />

    <TextView
        android:id="@+id/txtSortingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSortingSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/txtSortingBtn"
        android:textAlignment="center" />

</RelativeLayout>
