<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.welcometohogwarts.Patronus">

    <TextView
        android:id="@+id/txtPatronusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/txtPatronusTitle" />

    <Button
        android:id="@+id/btnDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="Button"
        tools:text="@string/btnDistanceTitle" />

    <TextView
        android:id="@+id/txtDistanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDistance"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAlignment="center"
        tools:text="@string/txtDistanceBtn" />
</RelativeLayout>
